Bug 230267       BeOS: The caret is stuck or hidden (when GIF animations are visible) patch by sergei_d@fi.tartu.ee (Sergei Dolgov) r=thesuckiestemail@yahoo.se (Fredrik Holmqvist) beos only, no sr needed