widget/src/beos/nsLookAndFeel.cpp
@@ -333,7 +333,7 @@ NS_IMETHODIMP nsLookAndFeel::GetMetric(const nsMetricID aID, PRInt32 & aMetric)
       break;
       
     case eMetric_CaretBlinkTime:
-      aMetric = 300;
+      aMetric = 100;
       break;
     case eMetric_SingleLineCaretWidth:
       aMetric = 1;
@@ -342,7 +342,7 @@ NS_IMETHODIMP nsLookAndFeel::GetMetric(const nsMetricID aID, PRInt32 & aMetric)
       aMetric = 2;
       break;
     case eMetric_ShowCaretDuringSelection:
-      aMetric = 0;
+      aMetric = 1;
       break;
     case eMetric_SelectTextfieldsOnKeyFocus:
       // Do not select textfield content when focused by kbd
